[package]
name = "muy_zipido"
version = "0.1.0"
edition = "2024"
authors = ["Chris C"]
description = "Rust library to stream and decompress ZIP files on-the-fly without loading into memory"
readme = "README.md"
repository = "https://github.com/CHRISCARLON/MuyZipido"
license = "MIT"
keywords = ["zip", "stream", "decompress", "archive"]

[dependencies]
flate2 = "1.1.2"
reqwest = { version = "0.12.23", features = ["blocking", "stream"] }
tokio = { version = "1.47.1", features = ["full"] }
